# Crvrs-SaltStack

./: .gitignore  README.md  ruff.toml
salt-ctrl/: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
salt-ctrl/src/: config.py
salt-ctrl/src/config/: .secrets.example.toml  settings.toml
salt-ctrl/src/inventory/: master.example.json  minions.example.json
salt-ctrl/src/salt_ctrl/: __init__.py  constants.py  salt_nodes.py  test.py
salt-ctrl/src/salt_ctrl/core/: __init__.py  config.py  salt_nodes.py
salt-ctrl/src/salt_ctrl/domain/: __init__.py
salt-ctrl/src/salt_ctrl/domain/inventory/: __init__.py  schemas.py
salt-ctrl/src/salt_ctrl/utils/: __init__.py
salt-ctrl/src/salt_ctrl/utils/dataframe_utils/: __init__.py  operations.py
salt-ctrl/src/salt_ctrl/utils/jinja_utils/: __init__.py  operations.py
salt-ctrl/src/salt_ctrl/utils/net_utils/: __init__.py  operations.py
salt-ctrl/src/salt_ctrl/utils/salt_inventory_utils/: __init__.py  operations.py
salt-ctrl/src/templates/scripts/setup/linux/: allow_ports.j2  install_master.j2  install_minion.j2
scripts/setup/: allow_ports.sh  install_master.sh  install_minion.sh
